Bug 777913 - shutdown timings for multiple sessions are not recorded correctly. r=nfroyd.